<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clipChildren="false"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:context=".ui.fragments.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <com.drdisagree.colorblendr.ui.widgets.ColorPickerWidget
                android:id="@+id/secondary_color_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_paint"
                app:previewColor="@android:color/white"
                app:summaryText="@string/custom_secondary_color_summary"
                app:titleText="@string/custom_secondary_color_desc" />

            <com.drdisagree.colorblendr.ui.widgets.ColorPickerWidget
                android:id="@+id/tertiary_color_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_paint"
                app:previewColor="@android:color/white"
                app:summaryText="@string/custom_tertiary_color_desc"
                app:titleText="@string/custom_tertiary_color_title" />

            <com.drdisagree.colorblendr.ui.widgets.SwitchWidget
                android:id="@+id/mode_specific_themes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_light_dark"
                app:summaryText="@string/mode_specific_theme_desc"
                app:titleText="@string/mode_specific_theme_title" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/header"
        layout="@layout/view_toolbar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>