<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/container_margin_horizontal"
    android:layout_marginBottom="@dimen/container_margin_bottom"
    android:clickable="true"
    app:cardBackgroundColor="?attr/colorSurfaceContainer"
    app:cardCornerRadius="@dimen/container_corner_radius"
    app:cardMaxElevation="0dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingHorizontal="22dp"
        android:paddingVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_attach_file"
                app:tint="?attr/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="?attr/textAppearanceTitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/backup_restore_title"
                    android:textColor="?attr/colorOnSurface" />

                <com.google.android.material.textview.MaterialTextView
                    style="?attr/textAppearanceBodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="2dp"
                    android:alpha="0.8"
                    android:text="@string/backup_restore_desc"
                    android:textColor="?attr/colorOnSurface" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/backup_restore_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/backup"
                app:cornerRadius="@dimen/default_corner_radius"
                app:icon="@drawable/ic_backup"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/restore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:text="@string/restore"
                app:cornerRadius="@dimen/default_corner_radius"
                app:icon="@drawable/ic_restore"
                app:iconGravity="textStart" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>